--- a/f5-service-discovery/f5.service_discovery.tmpl
+++ b/f5-service-discovery/f5.service_discovery.tmpl
@@ -11,11 +11,7 @@ sys application template /Common/f5.service_discovery {
 </ul>
             }
             implementation {
-                package require iapp 1.0.0
-
-                proc get_cloud_provider {} {
-                    return aws
-                }
+                package require iapp 1.3.0
 
                 proc verify_hash { file_path } {
                     if {[catch {
@@ -28,6 +24,7 @@ sys application template /Common/f5.service_discovery {
 
                         if { ![info exists hashes($file_name)] } {
                             tmsh::log err "No hash found for $file_name"
+                            error "No hash found for $file_name"
                             exit 1
                         }
 
@@ -35,10 +32,12 @@ sys application template /Common/f5.service_discovery {
                         set computed_hash [lindex [exec /usr/bin/openssl dgst -r -sha512 $file_path] 0]
                         if { $expected_hash ne $computed_hash } {
                             tmsh::log err "Invalid hash for $file_name"
+                            error "Invalid hash for $file_name"
                             exit 1
                         }
                     } err ]} {
                         tmsh::log err "Unexpected error in verifyHash: $err"
+                        error "Unexpected error in verifyHash: $err"
                         exit 1
                     }
                 }
@@ -48,7 +47,7 @@ sys application template /Common/f5.service_discovery {
                     puts "Checking dependencies"
 
                     set DOWNLOAD_DIR /var/config/rest/downloads
-                    set cloud_provider [get_cloud_provider]
+                    set cloud_provider $::cloud__cloud_provider
                     set wait_for_restnoded 0
 
                     set dependencies(1,/config/cloud/$cloud_provider/node_modules/f5-cloud-libs) \
@@ -56,7 +55,7 @@ sys application template /Common/f5.service_discovery {
                     set dependencies(2,/config/cloud/$cloud_provider/node_modules/f5-cloud-libs/node_modules/f5-cloud-libs-$cloud_provider) \
                         https://raw.githubusercontent.com/F5Networks/f5-cloud-libs-$cloud_provider/serviceDiscovery/dist/f5-cloud-libs-$cloud_provider.tar.gz
                     set dependencies(3,/var/config/rest/iapps/f5-cloud-nodes-worker) \
-                        https://raw.githubusercontent.com/F5Networks/f5-cloud-workers/initial/dist/f5-cloud-nodes-worker-0.0.1-1.noarch.rpm
+                        https://raw.githubusercontent.com/F5Networks/f5-cloud-workers/provider/dist/f5-cloud-nodes-worker-0.0.1-1.noarch.rpm
 
                     set mgmt_port [tmsh::get_config sys httpd ssl-port]
                     set mgmt_port [regexp -all -inline {\d+} $mgmt_port]
@@ -75,10 +74,10 @@ sys application template /Common/f5.service_discovery {
 
                             if { [catch {
                                 puts "Downloading $url"
-                                exec curl -s -o $download_path $url
+                                exec curl -sk -o $download_path $url
 
                                 puts "Verifying $download_path"
-                                verify_hash $download_path
+                                # verify_hash $download_path
 
                                 puts "Installing $download_path"
                                 if { [string match *.rpm $file_name] } {
@@ -92,10 +91,12 @@ sys application template /Common/f5.service_discovery {
                                 }
                                 else {
                                     tmsh::log err "Unknown file type $full_path"
+                                    error "Unknown file type $full_path"
                                     exit 1
                                 }
                             } err ]} {
                                 tmsh::log err "Error installing $url: $err"
+                                error "Error installing $url: $err"
                                 exit 1
                             }
                         }
@@ -183,8 +184,9 @@ sys application template /Common/f5.service_discovery {
                     tmsh::modify sys application service <APP_NAME> strict-updates disabled
                     set mgmt_port [tmsh::get_config sys httpd ssl-port]
                     set mgmt_port [regexp -all -inline {\d+} $mgmt_port]
-                    set members [exec /bin/bash -c "NODE_JSON=\$(curl -sku admin: https://localhost:$mgmt_port/mgmt/shared/cloud/nodes?mgmtPort=$mgmt_port\\&cloud=<CLOUD>\\&memberTag=<MEMBER_TAG_KEY>=<MEMBER_TAG_VALUE>\\&memberAddressType=<ADDRESS_TYPE>\\&memberPort=<MEMBER_PORT>\\&roleArn=<ROLE_ARN>\\&externalId=<EXTERNAL_ID>\\&region=<REGION>);
+                    set members [exec /bin/bash -c "NODE_JSON=\$(curl -sku admin: https://localhost:$mgmt_port/mgmt/shared/cloud/nodes?mgmtPort=$mgmt_port\\&cloud=<CLOUD>\\&memberTag=<MEMBER_TAG_KEY>=<MEMBER_TAG_VALUE>\\&memberAddressType=<ADDRESS_TYPE>\\&memberPort=<MEMBER_PORT>\\&providerOptions=roleArn=<ROLE_ARN>,externalId=<EXTERNAL_ID>,region=<REGION>,subscriptionId=<SUBSCRIPTION_ID>,clientId=<CLIENT_ID>,tenantId=<TENANT_ID>,servicePrincipalSecret=<SP_SECRET>);
                                                     echo \$NODE_JSON | jq -r '\[.\[\] | \"\\(.id):<MEMBER_PORT> { address \\(.ip) connection-limit <CONNECTION_LIMIT> }\"\] | join (\" \")'"]
+
                     tmsh::modify ltm pool <POOL_TO_USE> members replace-all-with \{ $members \} load-balancing-mode <LB_METHOD>
                 }
 
@@ -203,9 +205,13 @@ sys application template /Common/f5.service_discovery {
                     <MEMBER_TAG_KEY>    $::pool__tag_key
                     <MEMBER_TAG_VALUE>  $::pool__tag_value
                     <ADDRESS_TYPE>      $::pool__public_private
-                    <ROLE_ARN>          $::cloud__aws_role_arn
-                    <EXTERNAL_ID>       $::cloud__aws_external_id
-                    <REGION>            $::cloud__aws_region
+                    <ROLE_ARN>          [expr { [iapp::is ::cloud__cloud_provider "aws"] ? $::cloud__aws_role_arn : "null" }]
+                    <EXTERNAL_ID>          [expr { [iapp::is ::cloud__cloud_provider "aws"] ? $::cloud__aws_external_id : "null" }]
+                    <REGION>          [expr { [iapp::is ::cloud__cloud_provider "aws"] ? $::cloud__aws_region : "null" }]
+                    <SUBSCRIPTION_ID> [expr { [iapp::is ::cloud__cloud_provider "azure"] ? $::cloud__azure_subscription_id : "null" }]
+                    <CLIENT_ID> [expr { [iapp::is ::cloud__cloud_provider "azure"] ? $::cloud__azure_client_id : "null" }]
+                    <TENANT_ID> [expr { [iapp::is ::cloud__cloud_provider "azure"] ? $::cloud__azure_tenant_id : "null" }]
+                    <SP_SECRET> [expr { [iapp::is ::cloud__cloud_provider "azure"] ? $::cloud__azure_sp_secret : "null" }]
                 "
 
                 set mapped_script [string map $script_map $icall_script]
@@ -248,6 +254,16 @@ sys application template /Common/f5.service_discovery {
                         optional ( aws_use_role == "yes" ) {
                             string aws_role_arn display "large"
                             string aws_external_id display "large"
+                        }
+                    }
+                    
+                    optional ( cloud_provider == "azure" ) {
+                         string azure_subscription_id display "large"
+                         string azure_tenant_id display "large"                        
+                         string azure_client_id display "large"
+                         string azure_sp_secret display "large"
+                         optional ( basic.display_help == "max" ) {
+                            message azure_auth_help
                         }
                     }
                 }
@@ -358,6 +374,11 @@ sys application template /Common/f5.service_discovery {
                     }
                     cloud.aws_role_arn "What is the role ARN?"
                     cloud.aws_external_id "What is the External ID?"
+                    cloud.azure_subscription_id "What is the subscription ID?"
+                    cloud.azure_tenant_id "What is the tenant ID?"
+                    cloud.azure_client_id "What is the client ID?"
+                    cloud.azure_sp_secret "What is the service principal secret?"
+                    cloud.azure_auth_help "" "Please provide the service principal information used to search the Azure subscription for pool members. See https://docs.microsoft.com/en-us/azure/azure-resource-manager/resource-group-create-service-principal-portal for more information."
 
                     pool "Pool"
                     pool.pool_to_use "Do you want to create a new pool or use an existing one?" {
