--- a/f5-service-discovery/f5.service_discovery.tmpl
+++ b/f5-service-discovery/f5.service_discovery.tmpl
@@ -197,7 +197,7 @@ sys application template /Common/f5.service_discovery {
                     set mgmt_port [tmsh::get_config sys httpd ssl-port]
                     set mgmt_port [regexp -all -inline {\d+} $mgmt_port]
                     set members [exec /bin/bash -c "NODE_JSON=\$(curl -sku admin: https://localhost:$mgmt_port/mgmt/shared/cloud/nodes?mgmtPort=$mgmt_port\\&cloud=<CLOUD>\\&memberTag=<MEMBER_TAG_KEY>=<MEMBER_TAG_VALUE>\\&memberAddressType=<ADDRESS_TYPE>\\&memberPort=<MEMBER_PORT>\\&providerOptions=<PROVIDER_OPTIONS>);
-                                                    echo \$NODE_JSON | jq -r '\[.\[\] | \"\\(.id):<MEMBER_PORT> { address \\(.ip) connection-limit <CONNECTION_LIMIT> }\"\] | join (\" \")'"]
+                                                    echo \$NODE_JSON | jq -r '\[.\[\] | \"\\(.ip):<MEMBER_PORT> { address \\(.ip) description \\(.id) connection-limit <CONNECTION_LIMIT> }\"\] | join (\" \")'"]
 
                     tmsh::modify ltm pool <POOL_TO_USE> members replace-all-with \{ $members \}
 
@@ -308,7 +308,7 @@ sys application template /Common/f5.service_discovery {
 
                     string member_port display "small" required default "80" validator "PortNumber"
                     string member_conn_limit display "small" required default "0" validator "NonNegativeNumber"
-                    
+
                     optional ( basic.advanced == "yes" ) {
                         lb_method lb_method_choice
 
