--- a/f5-service-discovery/f5.service_discovery.tmpl
+++ b/f5-service-discovery/f5.service_discovery.tmpl
@@ -16,10 +16,10 @@ sys application template /Common/f5.service_discovery {
                 proc verify_hash { file_path } {
                     if {[catch {
 
-                        set hashes(f5-cloud-libs.tar.gz) c9af351619370fe390958dc3284ae0880c633deb181fab52a630ee8bbc284aeecd0e455cdd478e17ff5f0b2567029302400341ef9252a9dbcf5536f4bfa20bb6
-                        set hashes(f5-cloud-libs-aws.tar.gz) 1d1ea551c0dcfcdb90c9a4767f6e2cbe41b2560af472057d389da7e70b77eccb99947dbdfbfe7b6ce39e85a34fb3b00dd6fc08addc310741ebd030c689512e2c
-                        set hashes(f5-cloud-libs-azure.tar.gz) 66330f636f5b4d213fd48816302eca7be5a65968150f439ddae986392c79a81a69cf6a783edca13960894ff9058828163649f935c2c96c3f47ba595dc8adaf6c
-                        set hashes(f5-cloud-nodes-worker-0.0.1-1.noarch.rpm) 0d280b46460b8e041e2692b2c265067c3e51a09206dab2212678c267fb30f15969e09a1bd08858020a493a11ebab88738b44d957e159ede261ba33ba767be08d
+                        set hashes(f5-cloud-libs.tar.gz) 6db9649698cb7af311defc89ccea1c0208d3b6cfc73b7bab5b52ab9d5074677ec9a1559a5e54e7325aa334a02d26d76528b5ead08e1654dcbf77c94192156468
+                        set hashes(f5-cloud-libs-aws.tar.gz) e766afee400582d159b354db1864c28c44de3dba08a85055eaa2599009603059bc73c8d4e941c6beb44aba1c2bc390462e6ec696aacf74964a08db966e612816
+                        set hashes(f5-cloud-libs-azure.tar.gz) 111151c26e58272bb7cce47ec9076c41a27e3864e235b628cc095d09d181ee8194e30da0553a5a06c6fa15dabf3444d3276ff6bb268b1c2f3ce21b73a56b9f34
+                        set hashes(f5-cloud-nodes-worker-1.0.0-1.noarch.rpm) 9510256c1b690363af68083c480ae10023580d46f6d11021c0a54f1747cb4f7afe42cc50fcd4a15bbed9860a9b9e3dc1adfc406ba3726b35fb4feca86c557b57
 
                         set file_name [file tail $file_path]
 
@@ -51,15 +51,15 @@ sys application template /Common/f5.service_discovery {
                     set cloud_provider $::cloud__cloud_provider
                     set wait_for_restnoded 0
 
-                    set cloud_libs_tag v3.1.0-beta
-                    set nodes_worker_tag v1.0.0-beta
+                    set cloud_libs_tag release-3.1.0
+                    set nodes_worker_tag release-1.0.0
 
                     if { $cloud_provider == "azure" } {
                         set top_dir /config/cloud/node_modules
-                        set provider_tag serviceDiscovery
+                        set provider_tag release-1.2.0
                     } else {
                         set top_dir /config/cloud/$cloud_provider/node_modules
-                        set provider_tag v1.3.0-beta
+                        set provider_tag release-1.3.0
                     }
 
                     set dependencies(1,$top_dir/f5-cloud-libs) \
